package chapter5_strategy.exercise.no4.color;

import chapter5_strategy.exercise.no4.Ball;

public abstract class DrawStrategy {

    public abstract void draw(Ball ball);
}
