package chapter5_strategy.exercise.no4.move;

import chapter5_strategy.exercise.no4.Ball;

public abstract class DirectionStrategy {

    public abstract void move(Ball ball);
}